nesc-frontend/src/test/resources/integration/programs/good/good02/C.nc
/* Using 'void' for specifying that a function takes no arguments. */

int f(void)
{
   return 0;
}

configuration C
{
}
implementation
{
}
