nesc-frontend/src/test/resources/integration/programs/bad/bad18/C.nc
/* Using a floating type for an interface parameter
   when an integer type is required. */

configuration C
{
}
implementation
{
   components M;
}
